BROWSE-324 fixed scrollbar issue

--- a/src/app/components/snomed-navbar/snomed-navbar.component.scss
+++ b/src/app/components/snomed-navbar/snomed-navbar.component.scss
@@ -97,7 +97,7 @@ nav {
                 background-color: $bootstrap-dark;
                 z-index: auto;
                 height: auto;
-                overflow-y: scroll;
+                overflow-y: auto;
                 max-height: 80vh;
 
                 &.show {
